<resources>
    <string name="app_name">SpeedLess</string>
    <string name="action_settings">Settings</string>
    <string name="switchButton">Switch On</string>
    <string name="bluetoothButton">Bluetooth</string>
    <string name="statisticsButton">Statistics</string>
    <string name="friendsButton">Friends</string>
    <string name="leaderboardsButton">LeaderBoards</string>
    <string name="speedLess">SpeedLess</string>
    <string name="login">Login</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="loginText">Login</string>
    <string name="registerText">Register new user</string>
</resources>
